--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "JS Word Counter",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test-watch":"jest --watch"
   },
   "author": "",
   "license": "ISC"
