--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-  "name": "countword",
-  "version": "1.0.0",
+  "name": "@bastienduran/count-word",
+  "version": "1.0.1",
   "description": "JS Word Counter",
-  "main": "index.js",
+  "main": "dist/word-counter.js",
   "scripts": {
     "test": "jest",
-    "test-watch": "jest --watch"
+    "test-watch": "jest --watch",
+    "build": "webpack ./webpack.config.js"
   },
-  "author": "",
+  "author": "Bastien DURAN",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-jest": "^23.6.0",
+    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
-    "regenerator-runtime": "^0.12.1"
+    "regenerator-runtime": "^0.12.1",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2"
   },
   "dependencies": {
+    "clean-webpack-plugin": "^1.0.0",
     "jest": "^23.6.0"
   }
 }
